--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2"
+    "react": ">= 16.8.0",
+    "react-dom": ">= 16.8.0",
+    "react-is": ">= 16.8.0",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "sass": "^1.29.0"
   }
 }
