--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "parcel": "^2.0.0-beta.1",
+    "cssnano": "^4.1.10",
     "sass": "^1.29.0"
   }
 }
