--- a/package.json
+++ b/package.json
@@ -7,20 +7,33 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "start": "parcel serve index.html",
+    "start": "ENV=development parcel serve index.html ",
     "build": "parcel build index.html"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
-    "react": ">= 16.8.0",
+    "gsap": "^3.5.1",
+    "howler": "^2.2.1",
+    "moment": "^2.29.1",
+    "react": "^16.8.3 || ^17",
     "react-dom": ">= 16.8.0",
-    "react-is": ">= 16.8.0",
+    "react-ga": "^3.2.1",
+    "react-horizontal-scrolling-menu": "^0.7.8",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-simple-wheel-picker": "^1.2.0",
+    "redux": "^2.0.0 || ^3.0.0 || ^4.0.0-0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "cssnano": "^4.1.10",
+    "parcel": "^2.0.0-beta.1",
     "sass": "^1.29.0"
+  },
+  "alias": {
+    "$assets": "./src/assets",
+    "$components": "./src/components",
+    "$containers": "./src/containers",
+    "$redux": "./src/redux"
   }
 }
