--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.4.0",
     "gsap": "^3.5.1",
     "howler": "^2.2.1",
+    "luxon": "^1.25.0",
     "moment": "^2.29.1",
     "react": "^16.8.3 || ^17",
     "react-dom": ">= 16.8.0",
@@ -32,6 +33,7 @@
   },
   "alias": {
     "$assets": "./src/assets",
+    "$common": "./src/common",
     "$components": "./src/components",
     "$containers": "./src/containers",
     "$redux": "./src/redux"
