--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "mkondo",
   "version": "1.0.0",
   "description": "Webapp for music development app",
-  "main": "dist/index.html",
   "author": "Harvey Kadyanji et al.",
   "license": "UNLICENSED",
   "private": true,
@@ -23,12 +22,12 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-simple-wheel-picker": "^1.2.0",
-    "redux": "^2.0.0 || ^3.0.0 || ^4.0.0-0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "cssnano": "^4.1.10",
     "parcel": "^2.0.0-beta.1",
+    "postcss-modules": "^3.2.2",
     "sass": "^1.29.0"
   },
   "alias": {
