--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "start": "ENV=development parcel serve index.html",
-    "build": "ENV=production parcel build index.html --no-cache"
+    "start": "parcel serve index.html",
+    "build": "parcel build index.html --no-cache"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
