--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
+    "axios": "^0.21.0",
     "gsap": "^3.5.1",
     "howler": "^2.2.1",
     "luxon": "^1.25.0",
