--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.1",
+    "react-share": "^4.3.1",
     "react-simple-wheel-picker": "^1.2.0",
     "regenerator-runtime": "^0.13.7",
     "styled-components": "^5.2.1"
