reset password complete...

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "howler": "^2.2.1",
     "luxon": "^1.25.0",
     "moment": "^2.29.1",
+    "query-string": "^6.13.7",
     "react": "^16.8.3 || ^17",
     "react-dom": ">= 16.8.0",
     "react-ga": "^3.2.1",
