--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.1",
     "query-string": "^6.13.7",
     "react": "^16.8.3 || ^17",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": ">= 16.8.0",
     "react-ga": "^3.2.1",
     "react-horizontal-scrolling-menu": "^0.7.8",
