--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -31,8 +31,8 @@ jobs:
       
     - name: Deploy production
       if: github.ref == 'refs/heads/master'
-      run: rm -rf /home/mwakatumbula/production/webapp
-           cp -r /home/mwakatumbula/deploy/deploy/webapp/webapp/ /home/mwakatumbula/production
+    - run: rm -rf /home/mwakatumbula/production/webapp
+    - run: cp -r /home/mwakatumbula/deploy/deploy/webapp/webapp/ /home/mwakatumbula/production
       
      
     
