--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -42,8 +42,8 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          args: ${{ github.user }} The ${{ github.event_name }} event triggered first step Mkondo Web App Action Status ${{job.status}}.  
-          message: Mkondo API Action Status ${{job.status}} github
+          args: ${{ GITHUB_ACTOR }} just triggered ${{ github.event_name }} event on Mkondo Web App Action Status ${{job.status}}.  
+
       
      
     
