--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,14 +35,14 @@ jobs:
       
   notify:
     name: Notify via Telegram
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Send message to Telegram
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          args: ${{ github.actor }} just triggered ${{ github.event_name }} event on Mkondo Web App ${{ github.repository }} Action Status ${{job.status}}.  
+          args: ${{ github.actor }} just triggered ${{ github.event_name }} event on ${{ github.repository }} Action Status ${{job.status}}.  
 
       
      
