--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "query-string": "^6.13.7",
     "react": "^16.8.3 || ^17",
     "react-beautiful-dnd": "^13.0.0",
+    "react-content-loader": "^6.0.1",
     "react-dom": ">= 16.8.0",
+    "react-error-boundary": "^3.1.0",
     "react-ga": "^3.2.1",
     "react-horizontal-scrolling-menu": "^0.7.8",
     "react-redux": "^7.2.2",
