--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.29.1",
     "query-string": "^6.13.7",
     "react": "^16.8.3 || ^17",
+    "react-aria-menubutton": "^7.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-content-loader": "^6.0.1",
     "react-dom": ">= 16.8.0",
