--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-error-boundary": "^3.1.0",
     "react-ga": "^3.2.1",
     "react-horizontal-scrolling-menu": "^0.7.8",
+    "react-player": "^2.8.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.1",
