--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-select": "^3.1.1",
     "react-share": "^4.3.1",
     "regenerator-runtime": "^0.13.7",
+    "screenfull": "^5.1.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
