--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": ">= 16.8.0",
     "react-error-boundary": "^3.1.0",
     "react-ga": "^3.2.1",
+    "react-image-crop": "^8.6.6",
     "react-player": "^2.8.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
