--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,8 +22,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: yarn install
-    - run: yarn build
+    - run: npm install
+    - run: npm run build
     
     - name: Deploy staging
       if: github.ref == 'refs/heads/staging'
