--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react": "^17.0.2",
         "react-aria-menubutton": "^7.0.1",
         "react-beautiful-dnd": "^13.0.0",
+        "react-circular-progressbar": "^2.0.4",
         "react-content-loader": "^6.0.1",
         "react-dom": ">= 16.8.0",
         "react-error-boundary": "^3.1.0",
