--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
         "parcel": "^2.0.0-beta.1",
         "postcss": "^8.2.10",
         "postcss-modules": "^3.2.2",
-        "sass": "^1.29.0"
+        "sass": "^1.29.0",
+        "video.js": "^7.14.3"
     },
     "alias": {
         "$assets": "./src/assets",
