--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-image-crop": "^8.6.6",
         "react-player": "^2.8.2",
         "react-redux": "^7.2.2",
+        "react-responsive-carousel": "^3.2.20",
         "react-router-dom": "^5.2.0",
         "react-select": "^3.1.1",
         "react-share": "^4.3.1",
