--- a/.parcelrc
+++ b/.parcelrc
@@ -1,6 +1,6 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "*.{jpg,png,svg}": ["@parcel/transformer-raw"]
+    "*.{jpg,png,svg,mov}": ["@parcel/transformer-raw"]
   }
 }
