--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "proxy": "http://127.0.0.1:5000",
     "dependencies": {
         "@reactchartjs/react-chart.js": "^1.0.0-rc.3",
-        "@reduxjs/toolkit": "^1.4.0",
+        "@reduxjs/toolkit": "^1.8.0",
+        "@stripe/react-stripe-js": "^1.7.0",
+        "@stripe/stripe-js": "^1.23.0",
         "chart.js": "^2.9.4",
         "gsap": "^3.5.1",
         "howler": "^2.2.1",
         "i18next": "^20.2.2",
         "i18next-browser-languagedetector": "^6.1.0",
-        "i18next-http-backend": "^1.2.2",
+        "i18next-http-backend": "^1.3.2",
         "lodash.debounce": "^4.0.8",
         "luxon": "^1.25.0",
         "moment": "^2.29.1",
@@ -49,8 +51,8 @@
     "devDependencies": {
         "@parcel/transformer-sass": "^2.0.0-beta.2",
         "cssnano": "^4.1.10",
-        "parcel": "^2.0.0-beta.1",
-        "postcss": "^8.2.10",
+        "parcel": "^2.3.2",
+        "postcss": "^8.4.7",
         "postcss-modules": "^3.2.2",
         "sass": "^1.29.0",
         "video.js": "^7.17.0"
