--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "proxy": "http://127.0.0.1:5000",
     "dependencies": {
+        "@parcel/transformer-sass": "^2.3.2",
         "@reactchartjs/react-chart.js": "^1.0.0-rc.3",
         "@reduxjs/toolkit": "^1.8.0",
         "@stripe/react-stripe-js": "^1.7.0",
@@ -49,11 +50,11 @@
         "styled-components": "^5.2.1"
     },
     "devDependencies": {
-        "@parcel/transformer-sass": "^2.0.0-beta.2",
+        "buffer": "^6.0.3",
         "cssnano": "^4.1.10",
         "parcel": "^2.3.2",
         "postcss": "^8.4.7",
-        "postcss-modules": "^3.2.2",
+        "postcss-modules": "^4.3.0",
         "sass": "^1.29.0",
         "video.js": "^7.17.0"
     },
