--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,11 +22,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install
-      run: |
-        rm -rfv node_modules
-        rm -rfv .parcel-cache
-        npm install
+    - run: npm install --legacy-peer-deps
     - run: npm run build
     
     - name: Deploy staging
