--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
         "react-router-dom": "^5.2.0",
         "react-select": "^3.1.1",
         "react-share": "^4.3.1",
+        "redux-persist": "^6.0.0",
         "regenerator-runtime": "^0.13.7",
         "screenfull": "^5.1.0",
+        "storage": "^0.2.0",
         "styled-components": "^5.2.1"
     },
     "devDependencies": {
@@ -54,7 +56,7 @@
         "cssnano": "^4.1.10",
         "parcel": "^2.3.2",
         "postcss": "^8.4.7",
-        "postcss-modules": "^4.3.0",
+        "postcss-modules": "^4.3.1",
         "sass": "^1.29.0",
         "video.js": "^7.17.0"
     },
