video expansion trailer

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@stripe/react-stripe-js": "^1.7.0",
         "@stripe/stripe-js": "^1.23.0",
         "chart.js": "^2.9.4",
+        "country-region-data": "^2.4.0",
         "gsap": "^3.5.1",
         "howler": "^2.2.1",
         "i18next": "^20.2.2",
@@ -31,6 +32,7 @@
         "react-beautiful-dnd": "^13.0.0",
         "react-circular-progressbar": "^2.0.4",
         "react-content-loader": "^6.0.3",
+        "react-country-region-selector": "^3.4.0",
         "react-dom": ">= 16.8.0",
         "react-error-boundary": "^3.1.0",
         "react-facebook-login": "^4.1.1",
