--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "license": "UNLICENSED",
     "private": true,
     "scripts": {
-        "start": "parcel serve index.html -p 3000",
+        "start": "parcel serve index.html -p 3000 --https",
         "build": "parcel build --no-cache index.html"
     },
     "proxy": "http://127.0.0.1:5000",
     "dependencies": {
         "@parcel/transformer-sass": "^2.3.2",
+        "@react-oauth/google": "^0.2.6",
         "@reactchartjs/react-chart.js": "^1.0.0-rc.3",
         "@reduxjs/toolkit": "^1.8.0",
         "@stripe/react-stripe-js": "^1.7.0",
