--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "proxy": "http://127.0.0.1:5000",
     "dependencies": {
+        "@faker-js/faker": "^7.6.0",
         "@parcel/transformer-sass": "^2.3.2",
         "@react-oauth/google": "^0.2.6",
         "@reactchartjs/react-chart.js": "^1.0.0-rc.3",
