--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-beautiful-dnd": "^13.0.0",
         "react-circular-progressbar": "^2.0.4",
         "react-content-loader": "^6.0.3",
+        "react-cookie-consent": "^8.0.1",
         "react-country-region-selector": "^3.4.0",
         "react-dom": ">= 16.8.0",
         "react-error-boundary": "^3.1.0",
